Update workspace update script

--- a/cacerts/BUILD
+++ b/cacerts/BUILD
@@ -1,7 +1,6 @@
 package(default_visibility = ["//:__subpackages__"])
 
-load("//base:distro.bzl", "DISTRO_SUFFIXES")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//base:distro.bzl", "ARCHITECTURES", "DISTRO_SUFFIXES")
 load(":cacerts.bzl", "cacerts")
 load(":java.bzl", "cacerts_java")
 
