--- a/experimental/python2.7/BUILD
+++ b/experimental/python2.7/BUILD
@@ -1,9 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "ARCHITECTURES", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
-load("//:checksums.bzl", "ARCHITECTURES")
 
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
