--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -4,8 +4,7 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("//base:distro.bzl", "DISTRO_SUFFIXES")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//base:distro.bzl", "ARCHITECTURES", "DISTRO_SUFFIXES")
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
