--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -2,11 +2,9 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("//base:distro.bzl", "DISTRO_SUFFIXES")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//:checksums.bzl", "BASE_ARCHITECTURES")
 
 NODEJS_MAJOR_VERISONS = ("10", "12", "14")
-
-ARCHITECTURES = [arch for arch in ARCHITECTURES if arch != "s390x"]
 
 [
     container_image(
@@ -21,6 +19,6 @@ ARCHITECTURES = [arch for arch in ARCHITECTURES if arch != "s390x"]
         "_debug",
     ]
     for major_version in NODEJS_MAJOR_VERISONS
-    for arch in ARCHITECTURES
+    for arch in BASE_ARCHITECTURES
     for distro_suffix in DISTRO_SUFFIXES
 ]
