--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -334,6 +334,8 @@ steps:
     docker push 'gcr.io/$PROJECT_ID/static:nonroot-amd64'
     docker push 'gcr.io/$PROJECT_ID/static:latest-arm64'
     docker push 'gcr.io/$PROJECT_ID/static:nonroot-arm64'
+    docker push 'gcr.io/$PROJECT_ID/static:latest-s390x'
+    docker push 'gcr.io/$PROJECT_ID/static:nonroot-s390x'
     docker push 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}'
     docker push 'gcr.io/$PROJECT_ID/static-debian9:latest'
     docker push 'gcr.io/$PROJECT_ID/static-debian9:nonroot'
@@ -349,6 +351,10 @@ steps:
     docker push 'gcr.io/$PROJECT_ID/base:nonroot-arm64'
     docker push 'gcr.io/$PROJECT_ID/base:debug-arm64'
     docker push 'gcr.io/$PROJECT_ID/base:debug-nonroot-arm64'
+    docker push 'gcr.io/$PROJECT_ID/base:latest-s390x'
+    docker push 'gcr.io/$PROJECT_ID/base:nonroot-s390x'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-s390x'
+    docker push 'gcr.io/$PROJECT_ID/base:debug-nonroot-s390x'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:latest'
     docker push 'gcr.io/$PROJECT_ID/base-debian9:nonroot'
