--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -5,7 +5,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("//base:distro.bzl", "DISTRO_SUFFIXES")
-load("//:checksums.bzl", "BASE_ARCHITECTURES")
+load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
@@ -17,7 +17,7 @@ load("//:checksums.bzl", "BASE_ARCHITECTURES")
         cmd = ["hello.js"],
         files = [":hello.js"],
     )
-    for arch in BASE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
@@ -30,7 +30,7 @@ load("//:checksums.bzl", "BASE_ARCHITECTURES")
         files = [":hello_http.js"],
         ports = ["8000"],
     )
-    for arch in BASE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
@@ -46,6 +46,6 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
             "manual",
         ],
     )
-    for arch in BASE_ARCHITECTURES
+    for arch in ARCHITECTURES
     for distro_suffix in DISTRO_SUFFIXES
 ]
