Build s390x distroless base and static images (#612)
* Build s390x images on x86 machine
* Added BASE_ARCHITECTURES ["amd64", "arm64"]
* Improved arch/packages logic, updated yaml
* Fixed errors in if/then block

--- a/experimental/python2.7/BUILD
+++ b/experimental/python2.7/BUILD
@@ -3,7 +3,7 @@ package(default_visibility = ["//visibility:public"])
 load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
