--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -5,7 +5,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("//base:distro.bzl", "DISTRO_SUFFIXES")
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
